// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkSection should match snapshot when shared link expiration is set 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <span>
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
          <Tooltip
            constrainToScrollParent={false}
            constrainToWindow={true}
            isDisabled={false}
            position="top-center"
            text="This link will expire and be inaccessible on {expiration, date, long}."
            theme="default"
          >
            <span
              aria-label="Expires"
              className="shared-link-expiration-badge"
              role="img"
            >
              <IconClock
                color="#ed3757"
              />
            </span>
          </Tooltip>
        </span>
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={
          [
            "canViewOnly",
          ]
        }
        canChangePermissionLevel={true}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render a default component when there is a shared link but user lacks permission to toggle off 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Tooltip
      className="usm-disabled-message-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-right"
      text="You do not have permission to remove the link."
      theme="default"
    >
      <Toggle
        data-target-id="Toggle-CreateSharedLink"
        isDisabled={true}
        isOn={true}
        label={
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
        }
        name="toggle"
      />
    </Tooltip>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={[]}
        canChangePermissionLevel={false}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render default component with no sharedLink 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-right"
      targetWrapperClassName="usm-ftux-toggle-tooltip-target"
      text="Create and copy link for sharing"
      theme="default"
    >
      <Toggle
        data-target-id="Toggle-CreateSharedLink"
        isDisabled={false}
        isOn={false}
        label={
          <FormattedMessage
            defaultMessage="Create shared link"
            id="boxui.unifiedShare.linkShareOff"
          />
        }
        name="toggle"
      />
    </Tooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render default component with shared link 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={
          [
            "canViewOnly",
          ]
        }
        canChangePermissionLevel={true}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render default components with proper tooltip state while submitting request 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={true}
      isOn={false}
      label={
        <FormattedMessage
          defaultMessage="Create shared link"
          id="boxui.unifiedShare.linkShareOff"
        />
      }
      name="toggle"
    />
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render disabled create shared link message when item share is false and url is empty 1`] = `
<Tooltip
  className="usm-disabled-message-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-right"
  text="You do not have permission to create the link."
  theme="default"
>
  <Toggle
    data-target-id="Toggle-CreateSharedLink"
    isDisabled={true}
    isOn={false}
    label={
      <FormattedMessage
        defaultMessage="Create shared link"
        id="boxui.unifiedShare.linkShareOff"
      />
    }
    name="toggle"
  />
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkSection should render disabled remove shared link message when url is not empty and canChangeAccessLevel is false 1`] = `
<Tooltip
  className="usm-disabled-message-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-right"
  text="You do not have permission to remove the link."
  theme="default"
>
  <Toggle
    data-target-id="Toggle-CreateSharedLink"
    isDisabled={true}
    isOn={true}
    label={
      <FormattedMessage
        defaultMessage="Shared link is created"
        id="boxui.unifiedShare.linkShareOn"
      />
    }
    name="toggle"
  />
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper dropdown override when viewing an editable box note 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Tooltip
      className="usm-disabled-message-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-right"
      text="You do not have permission to remove the link."
      theme="default"
    >
      <Toggle
        data-target-id="Toggle-CreateSharedLink"
        isDisabled={true}
        isOn={true}
        label={
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
        }
        name="toggle"
      />
    </Tooltip>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="http://example.com/s/abc"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-center"
      text="This permission can only be changed in Box Notes"
      theme="default"
    >
      <PlainButton
        className="can-edit-btn"
        isDisabled={true}
      >
        <FormattedMessage
          defaultMessage="Can edit"
          id="boxui.unifiedShare.sharedLinkPermissionsEdit"
        />
      </PlainButton>
    </Tooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper list of permission options based on the the download setting availability 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={
          [
            "canViewDownload",
            "canViewOnly",
          ]
        }
        canChangePermissionLevel={true}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper list of permission options based on the the download setting availability 2`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={
          [
            "canViewOnly",
          ]
        }
        canChangePermissionLevel={true}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper list of permission options based on the the edit setting availability 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={
          [
            "canViewOnly",
          ]
        }
        canChangePermissionLevel={true}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper list of permission options based on the the edit setting availability 2`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
    <GuideTooltip
      body="Select the new edit option to easily share your file with people or groups."
      isShown={false}
      onDismiss={[Function]}
      position="bottom-center"
      title="Collaboration made easy"
    >
      <SharedLinkPermissionMenu
        allowedPermissionLevels={
          [
            "canViewOnly",
          ]
        }
        canChangePermissionLevel={true}
        changePermissionLevel={[Function]}
        isSharedLinkEditTooltipShown={false}
        trackingProps={
          {
            "onChangeSharedLinkPermissionLevel": undefined,
            "sharedLinkPermissionsMenuButtonProps": {
              "data-target-id": "Button-SharedLinkPermissionsMenuLabel",
            },
          }
        }
      />
    </GuideTooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render settings link when handler is provided and shared link is enabled 1`] = `
<PlainButton
  aria-haspopup="dialog"
  className="shared-link-settings-btn"
  data-resin-target="settings"
  data-target-id="PlainButton-SharedLinkSettings"
  onClick={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  type="button"
>
  <FormattedMessage
    defaultMessage="Link Settings"
    id="boxui.unifiedShare.sharedLinkSettings"
  />
</PlainButton>
`;

exports[`features/unified-share-modal/SharedLinkSection should render without SharedLinkPermissionMenu if access level is "people in item" 1`] = `
<div
  className="be"
>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Toggle
      data-target-id="Toggle-CreateSharedLink"
      isDisabled={false}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="shared-link-field-container-tooltip-wrapper"
      theme="callout"
    >
      <TextInputWithCopyButton
        aria-label="URL"
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={
          {
            "data-target-id": "Button-CopySharedLink",
          }
        }
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        onCopySuccess={[Function]}
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text="Send Shared Link"
      theme="default"
    >
      <Button
        aria-label="Send Shared Link"
        className="email-shared-link-btn"
        data-target-id="Button-SendSharedLink"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInThisItem"
      accessLevelsDisabledReason={{}}
      allowedAccessLevels={{}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": {
            "data-target-id": "Button-SharedLinkAccessMenuLabel",
          },
        }
      }
    />
  </div>
</div>
`;
